--- a/VGMTrans_WTL.vcxproj
+++ b/VGMTrans_WTL.vcxproj
@@ -260,6 +260,7 @@
     <ClCompile Include="src\main\formats\HudsonSnesInstr.cpp" />
     <ClCompile Include="src\main\formats\HudsonSnesScanner.cpp" />
     <ClCompile Include="src\main\formats\HudsonSnesSeq.cpp" />
+    <ClCompile Include="src\main\formats\JaiSeqScanner.cpp" />
     <ClCompile Include="src\main\formats\NamcoSnesInstr.cpp" />
     <ClCompile Include="src\main\formats\PrismSnesInstr.cpp" />
     <ClCompile Include="src\main\formats\PrismSnesScanner.cpp" />
@@ -458,6 +459,8 @@
     <ClInclude Include="src\main\formats\HudsonSnesInstr.h" />
     <ClInclude Include="src\main\formats\HudsonSnesScanner.h" />
     <ClInclude Include="src\main\formats\HudsonSnesSeq.h" />
+    <ClInclude Include="src\main\formats\JaiSeqFormat.h" />
+    <ClInclude Include="src\main\formats\JaiSeqScanner.h" />
     <ClInclude Include="src\main\formats\NamcoSnesInstr.h" />
     <ClInclude Include="src\main\formats\PrismSnesFormat.h" />
     <ClInclude Include="src\main\formats\PrismSnesInstr.h" />
