--- a/VGMTrans_WTL.vcxproj.filters
+++ b/VGMTrans_WTL.vcxproj.filters
@@ -264,6 +264,12 @@
     <Filter Include="Header Files\formats\rsar">
       <UniqueIdentifier>{421ed46d-2c16-4746-9bca-ea6899534bdb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\formats\jaiseq">
+      <UniqueIdentifier>{75e9c5d7-35a2-47de-ad7d-82c68f551d5c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\formats\jaiseq">
+      <UniqueIdentifier>{92fb3d94-b5bf-4ae9-b41b-3c84b042d2af}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ui\windows\aboutdlg.cpp">
@@ -828,6 +834,9 @@
     </ClCompile>
     <ClCompile Include="src\main\formats\RSARInstrSet.cpp">
       <Filter>Source Files\formats\rsar</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main\formats\JaiSeqScanner.cpp">
+      <Filter>Source Files\formats\jaiseq</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1501,6 +1510,12 @@
     </ClInclude>
     <ClInclude Include="src\main\formats\RSARInstrSet.h">
       <Filter>Header Files\formats\rsar</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\formats\JaiSeqFormat.h">
+      <Filter>Header Files\formats\jaiseq</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\formats\JaiSeqScanner.h">
+      <Filter>Header Files\formats\jaiseq</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
