--- a/.travis.yml
+++ b/.travis.yml
@@ -5,34 +5,30 @@ language: cpp
 
 matrix:
   include:
-    # GCC8
+    # GCC7
     - os: linux
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - gcc-7
             - g++-7
             - libglib2.0-dev
             - libfluidsynth-dev
-      env: CC='gcc-7' CXX='g++-7'
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
       before_install:
         - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
         - sudo apt-get update -qq
         - sudo apt-get install qtbase5-dev
     # LLVM5
     - os: linux
+      compiler: clang
       addons:
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-5.0
           packages:
-            - clang-5.0
             - libglib2.0-dev
             - libfluidsynth-dev
-      env: CC='clang-5.0' CXX='clang++-5.0'
       before_install:
         - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
         - sudo apt-get update -qq
@@ -42,18 +38,6 @@ matrix:
 #      before_install:
 #        - brew upgrade qt || brew install qt
 #        - brew upgrade fluid-synth || brew install fluid-synth
-
-install:
-  # We need CMake >= 3.5.0
-  - |
-    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      CMAKE_URL="https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz"
-      mkdir cmake-bin && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake-bin
-      export PATH=${TRAVIS_BUILD_DIR}/cmake-bin/bin:${PATH}
-    else
-      # For good measure, since Travis includes 3.6.2 anyway
-      brew upgrade cmake || brew install cmake
-    fi
 
 script:
   - mkdir build
