--- a/VGMTrans_WTL.vcxproj
+++ b/VGMTrans_WTL.vcxproj
@@ -263,6 +263,8 @@
     <ClCompile Include="src\main\formats\HudsonSnesInstr.cpp" />
     <ClCompile Include="src\main\formats\HudsonSnesScanner.cpp" />
     <ClCompile Include="src\main\formats\HudsonSnesSeq.cpp" />
+    <ClCompile Include="src\main\formats\KonamiPS1Scanner.cpp" />
+    <ClCompile Include="src\main\formats\KonamiPS1Seq.cpp" />
     <ClCompile Include="src\main\formats\NamcoSnesInstr.cpp" />
     <ClCompile Include="src\main\formats\PrismSnesInstr.cpp" />
     <ClCompile Include="src\main\formats\PrismSnesScanner.cpp" />
@@ -462,6 +464,9 @@
     <ClInclude Include="src\main\formats\HudsonSnesInstr.h" />
     <ClInclude Include="src\main\formats\HudsonSnesScanner.h" />
     <ClInclude Include="src\main\formats\HudsonSnesSeq.h" />
+    <ClInclude Include="src\main\formats\KonamiPS1Format.h" />
+    <ClInclude Include="src\main\formats\KonamiPS1Scanner.h" />
+    <ClInclude Include="src\main\formats\KonamiPS1Seq.h" />
     <ClInclude Include="src\main\formats\NamcoSnesInstr.h" />
     <ClInclude Include="src\main\formats\PrismSnesFormat.h" />
     <ClInclude Include="src\main\formats\PrismSnesInstr.h" />
